# goranireader

./: .dockerignore  .gitattributes  .gitignore  .gitmodules  Makefile  README.md  env.Dockerfile  index.html
server/: Cargo.toml  Gopkg.toml  api.Dockerfile  config.go  etl.Dockerfile  file.yaml  go.mod  go.sum  main.go
server/api/: api.go  auth.go  main.go  urls.go  users.go
server/api/api/: api.go  config.go  user.go
server/api/router/: ctx.go  genre.go  genre_test.go  register.go  router.go  router_test.go  user.go  word.go  (+1 more)
server/auth/: api_key.go
server/book/: book.go  dbh_test.go  goodreads.go  goodreads_test.go  parse.go
server/db/: err.mwb  schema.sql
server/etl/: main.go
server/middles/: auth.go  context.go  logger.go  params.go  tx.go
server/migrations/: 20181114053532_create_users.up.fizz  20181115072333_create_user.up.sql  20190210220935_create_books.up.sql  20190310062431_initial.down.sql  20190310062431_initial.up.sql
server/models/: book.go  context.go  progress.go  user.go
server/routes/: admin.go  admin_book.go  admin_books.go  book.go  book_review.go  book_reviews.go  books.go  memories.go  memory.go  progress.go  recommend.go  result.go  routes.go  shop.go  shop_book.go  shop_books.go  user.go  users.go  word.go  words.go
server/sentencer/: dictionary.go  sentence.go  stemmer.go  test.txt  tokenizer.go
server/server/: routes.go  server.go  users.go
server/src/: config.rs  main.rs  util.rs
server/util/: M.go  client.go  dtypes.go  http.go  rand.go  response.go  uuid.go
server/utils/: rand.go  sql_serializable.go  string.go
(+1823 files in other folders)
