[package]
name = "gorani-server"
version = "0.1.0"
authors = ["sunho <ksunhokim123@naver.com>"]

[dependencies]
rocket = "0.4.0-rc.1"
diesel = { version = "1.3.3", features = ["postgres"] }
diesel_migrations = { version = "1.3.0", features = ["postgres"] }
dotenv = "0.9.0"
chrono = { version = "0.4", features = ["serde"] }
lazy_static = "1.1.0"